compiler/testData/diagnostics/tests/sealed/NeverInterface.kt
<!WRONG_MODIFIER_TARGET!>sealed<!> interface Base {

}
